hyprlock layout script

--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -32,7 +32,7 @@ label {
   font_family=JetBrains Mono
   halign=center
   position=0, -160                      # то же положение, чтобы центр попал в shape
-  text=cmd[update:100] ~/hyprland/hyprlock_layout_check.sh
+  text=cmd[update:100] $HOME/.config/archx/hyprlock_layout_check.sh
   valign=center
   zindex=1
 }
