--- a/dotfiles/greetd/hyprland-regreet.conf
+++ b/dotfiles/greetd/hyprland-regreet.conf
@@ -5,8 +5,12 @@
 env = GTK_USE_PORTAL,0
 env = GDK_DEBUG,no-portals
 
-# Ensure sessions are discovered (ReGreet supports SESSION_DIRS via env).
-env = SESSION_DIRS,/etc/greetd/sessions:/usr/share/xsessions:/usr/share/wayland-sessions
+# Ensure sessions are discovered (keep it curated so default is predictable).
+env = SESSION_DIRS,/etc/greetd/sessions
+
+# Force greeter UI downscaling (2x smaller).
+env = GDK_SCALE,1
+env = GDK_DPI_SCALE,0.5
 
 # Scale down the greeter UI (avoid inheriting HiDPI scaling).
 monitor = ,preferred,auto,1
