fix gtkgreet scaling

--- a/dotfiles/greetd/hyprland-gtkgreet.conf
+++ b/dotfiles/greetd/hyprland-gtkgreet.conf
@@ -10,7 +10,13 @@ env = GDK_SCALE,1
 env = GDK_DPI_SCALE,1
 
 # Avoid inheriting HiDPI scaling.
+monitor = Virtual-1, 1920x1440@60.00Hz, 0x0, 1
 monitor = ,preferred,auto,1
+
+# Scaling fixed for non-wayland apps
+xwayland {
+    force_zero_scaling = true
+}
 
 # Avoid any default wallpaper/logo
 misc {
