--- a/dotfiles/greetd/hyprland-gtkgreet.conf
+++ b/dotfiles/greetd/hyprland-gtkgreet.conf
@@ -24,6 +24,8 @@ misc {
     disable_hyprland_logo = true
 }
 
+env = PATH,$PATH:/etc/greetd/bin
+
 # Start gtkgreet, then quit Hyprland after gtkgreet exits.
 # -l: layer-shell mode (best positioning on wlroots compositors)
 # --style: apply our Archx theme CSS
