add fuse to initial setup

--- a/archx/000_essentials.toml
+++ b/archx/000_essentials.toml
@@ -5,7 +5,7 @@ version = 1
 description = "Prerequisistes for the setup"
 
 [[packages]]
-names = ["git", "base-devel", "npm"]
+names = ["git", "base-devel", "npm", "fuse"]
 
 [[shell]]
 script = """
