fix: correct typos in plugin and gesture configurations

--- a/dotfiles/hypr/conf.d/06_plugins.conf
+++ b/dotfiles/hypr/conf.d/06_plugins.conf
@@ -10,7 +10,7 @@ plugin {
 
         enable_gesture = false
         gesture_fingers = 3
-        festure_distance = 50
+        gesture_distance = 50
         gesture_positive = true
     }
 }
