--- a/dotfiles/hypr/conf.d/07_gestures.conf
+++ b/dotfiles/hypr/conf.d/07_gestures.conf
@@ -1,3 +1,3 @@
 gesture = 3, up, dispatcher, hyprexpo:expo, on
-gesture = 3, down, dispatcher, hyperexpo:expo, off
+gesture = 3, down, dispatcher, hyprexpo:expo, off
 gesture = 3, horizontal, workspace
