--- a/dotfiles/hypr/conf.d/08_window_rules.conf
+++ b/dotfiles/hypr/conf.d/08_window_rules.conf
@@ -12,6 +12,7 @@ windowrule = opacity 0.89, match:class ^(kitty)$
 windowrule = tile on, match:class ^(steam_app_.*)$
 windowrule = tile on, match:class ^(com.lite_xl.LiteXL)$
 windowrule = tile on, match:class ^(DbVisualizer)$
+windowrule = fullscreen 2, match:title ^(Steam Big Picture Mode)$
 
 input {
     touchdevice {
