--- a/dotfiles/hypr/conf.d/05_binds.conf
+++ b/dotfiles/hypr/conf.d/05_binds.conf
@@ -11,6 +11,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, fullscreen, toggle
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
