--- a/dotfiles/vicinae/settings.json
+++ b/dotfiles/vicinae/settings.json
@@ -9,5 +9,18 @@
 // Learn more about configuration at https://docs.vicinae.com/config
 
 {
-   "$schema": "https://vicinae.com/schemas/config.json"
+   "$schema": "https://vicinae.com/schemas/config.json",
+   "providers": {
+      "@rastsislaux/pulseaudio": {
+         "enabled": false
+      },
+      "applications": {
+         "preferences": {
+            "paths": [
+               "/home/rastsislau/.local/share/applications",
+               "/usr/share/applications"
+            ]
+         }
+      }
+   }
 }
