--- a/dotfiles/hypr/conf.d/02_environment.conf
+++ b/dotfiles/hypr/conf.d/02_environment.conf
@@ -7,7 +7,7 @@
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = LITE_SCALE,1.5
-env = EDITOR,$HOME/.config/archx/lite-xl-disown
+env = EDITOR,nvim
 
 env = GDK_SCALE,1
 env = QT_SCALE_FACTOR,1
